--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
 </head>
 <body>
     <header>
-
+        <!-- nav start -->
+        <nav class="nav-container">
+            <div class="nav-logo">
+                <span>Digital</span>
+            <img src="./logo/logo.png" alt="">
+            </div>
+            <div class="nav-item">
+                <ul class="items">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- nav end -->
+         <!-- nav banner start  -->
+          
     </header>
     <main>
 
