Header & nav-banner complete

--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital-Agency</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <!-- nav start -->
-        <nav class="nav-container">
-            <div class="nav-logo">
-                <span>Digital</span>
-            <img src="./logo/logo.png" alt="">
-            </div>
-            <div class="nav-item">
-                <ul class="items">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Service</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-        <!-- nav end -->
-         <!-- nav banner start  -->
-          
+      <!-- nav start -->
+      <nav class="nav-container">
+        <div class="nav-logo">
+          <span>Digital</span>
+          <img src="./logo/logo.png" alt="" />
+        </div>
+        <div class="nav-item">
+          <ul class="items">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <!-- nav end -->
+      <!-- nav banner start  -->
+      <div class="nav-banner-container">
+        <div class="nav-banner-info">
+            <h1 class="nav-banner-title">
+              <span class="primary">Digital</span> Agency You <br />
+              can Rely Upon !
+            </h1>
+            <p class="nav-banner-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut porro
+              nisi voluptatum aliquam ab.<br>  Sint quibusdam accusamus   voluptas 
+              suscipit doloremque.  Lorem ipsum dolor sit amet<br> consectetur   adipisicing elit. Quisquam. 
+            </p>
+            <button class="btn bg-primary">DISCOVER MORE</button>
+            <button class="btn">HIRE US NOW</button>
+          </div>
+      </div>
+      <!-- nav banner end  -->
     </header>
     <main>
-
+        
     </main>
-    <footer>
-
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
