--- a/index.html
+++ b/index.html
@@ -27,23 +27,75 @@
       <!-- nav banner start  -->
       <div class="nav-banner-container">
         <div class="nav-banner-info">
-            <h1 class="nav-banner-title">
-              <span class="primary">Digital</span> Agency You <br />
-              can Rely Upon !
-            </h1>
-            <p class="nav-banner-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut porro
-              nisi voluptatum aliquam ab.<br>  Sint quibusdam accusamus   voluptas 
-              suscipit doloremque.  Lorem ipsum dolor sit amet<br> consectetur   adipisicing elit. Quisquam. 
-            </p>
-            <button class="btn bg-primary">DISCOVER MORE</button>
-            <button class="btn">HIRE US NOW</button>
-          </div>
+          <h1 class="nav-banner-title">
+            <span class="primary">Digital</span> Agency You <br />
+            can Rely Upon !
+          </h1>
+          <p class="nav-banner-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut porro
+            nisi voluptatum aliquam ab.<br />
+            Sint quibusdam accusamus voluptas suscipit doloremque. Lorem ipsum
+            dolor sit amet<br />
+            consectetur adipisicing elit. Quisquam.
+          </p>
+          <button class="btn bg-primary">DISCOVER MORE</button>
+          <button class="btn">HIRE US NOW</button>
+        </div>
       </div>
       <!-- nav banner end  -->
     </header>
     <main>
-        
+      <section class="Service-container">
+        <div class="service-info">
+          <button class="btn service-btn">Service List</button>
+          <h2 class="service-title">
+            <span class="primary">Service</span> We Can Help You With !
+          </h2>
+          <br />
+          <p class="service-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut porro
+            nisi voluptatum aliquam ab.<br />
+            Sint quibusdam accusamus voluptas suscipit doloremque. Lorem ipsum
+            dolor sit amet<br />
+            consectetur adipisicing elit. Quisquam.
+          </p>
+          <br />
+          <ol class="service-list">
+            <li>Lorem ipsum dolor sit amet.lorem.</li>
+            <li>Lorem ipsum dolor sit amet.</li>
+          </ol>
+          <div class="author-container">
+            <div class="profile-container">
+                <img class="author-img" src="./image/author.jpg" alt="">
+                <h5 class="author-info">George Smith <br> <small>CEO.Director</small></h5>
+            </div>
+            <button class=" btn service-btn">HIRE US NOW</button>
+          </div>
+        </div>
+        <div class="service-image">
+          <div class="all-box">
+            <div class="box">
+              <img class="service-icon" src="./icons/coding.png" alt="" />
+              <h3>Web Development</h3>
+            </div>
+            <div class="box">
+              <img class="service-icon" src="./icons/bar-chart.png" alt="" />
+              <h3>Graphic & Sketch Designing</h3>
+            </div>
+          </div>
+          <div class="all-box">
+            <div class="box">
+              <img class="service-icon" src="./icons/startup.png" alt="" />
+              <h3>SEO & Content Writing</h3>
+            </div>
+            <div class="box">
+              <img class="service-icon" src="./icons/digital-marketing.png" alt="" />
+              <h3>Digital Marketing Planning</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+      
     </main>
     <footer></footer>
   </body>
