phone-call-container-complete

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <!-- nav banner end  -->
     </header>
     <main>
+        <!-- Service-container start -->
       <section class="Service-container">
         <div class="service-info">
           <button class="btn service-btn">Service List</button>
@@ -66,10 +67,13 @@
           </ol>
           <div class="author-container">
             <div class="profile-container">
-                <img class="author-img" src="./image/author.jpg" alt="">
-                <h5 class="author-info">George Smith <br> <small>CEO.Director</small></h5>
+              <img class="author-img" src="./image/author.jpg" alt="" />
+              <h5 class="author-info">
+                George Smith <br />
+                <small>CEO.Director</small>
+              </h5>
             </div>
-            <button class=" btn service-btn">HIRE US NOW</button>
+            <button class="btn service-btn">HIRE US NOW</button>
           </div>
         </div>
         <div class="service-image">
@@ -89,11 +93,40 @@
               <h3>SEO & Content Writing</h3>
             </div>
             <div class="box">
-              <img class="service-icon" src="./icons/digital-marketing.png" alt="" />
+              <img
+                class="service-icon"
+                src="./icons/digital-marketing.png"
+                alt=""
+              />
               <h3>Digital Marketing Planning</h3>
             </div>
           </div>
         </div>
+      </section>
+      <!-- phone-call-container start  -->
+      <section class="phone-call-container">
+        <div class="phone-call">
+          <img class="service-icon" src="./icons/phone-call.png" alt="" />
+          <h5 class="phone-call-number">
+            <small>GET A FREE CONSULTATION</small> <br />
+            <b
+              >987 233 <br />
+              0000</b
+            >
+          </h5>
+        </div>
+        <div class="phone-call-text">
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio vel
+            <br />
+            hic iusto similique <br />
+            sapiente adipisci repudiandae sit aperiam. Est.
+          </p>
+        </div>
+        <button class="btn service-btn">
+          MAKE <br />
+          APPOINTMENT
+        </button>
       </section>
       
     </main>
