blog-container-complete

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- nav banner end  -->
     </header>
     <main>
-        <!-- Service-container start -->
+      <!-- Service-container start -->
       <section class="Service-container">
         <div class="service-info">
           <button class="btn service-btn">Service List</button>
@@ -128,8 +128,65 @@
           APPOINTMENT
         </button>
       </section>
-      
+      <!-- blog-container start  -->
+      <section class="blog-container">
+        <div class="blog-info">
+          <h1 class="blog-info-title">
+            <span class="primary">Blog</span> & News From Us !
+          </h1>
+          <p class="blog-info-text">
+            Lorem, ipsum dolor sit amet consectetur adipisicing <br />Vitae
+            alias sequi repudiandae provident commodi vero, corrupti ipsum
+            eveniet excepturi ratione! <br />
+            Lorem ipsum dolor sit amet
+          </p>
+        </div>
+        <div class="card-container">
+          <div class="card">
+            <img class="card-img" src="./image/blog-1.jpg" alt="" />
+            <div class="card-info">
+              <h4 class="card-title">
+                Maxime rhoncus aliquet sint <br />
+                eu accusantium illum.
+              </h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate molestias.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img" src="./image/blog-2.jpg" alt="" />
+            <div class="card-info">
+              <h4 class="card-title">
+                Maxime rhoncus aliquet sint <br />
+                eu accusantium illum.
+              </h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate molestias.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img" src="./image/blog-3.jpg" alt="" />
+            <div class="card-info">
+              <h4 class="card-title">
+                Maxime rhoncus aliquet sint <br />
+                eu accusantium illum.
+              </h4>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptate molestias.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <!-- footer start  -->
+    <footer>
+      
+    </footer>
   </body>
 </html>
