--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Digital-Agency</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -132,7 +135,7 @@
       <section class="blog-container">
         <div class="blog-info">
           <h1 class="blog-info-title">
-            <span class="primary">Blog</span> & News From Us !
+            <span class="primary">Blog</span>& News From Us !
           </h1>
           <p class="blog-info-text">
             Lorem, ipsum dolor sit amet consectetur adipisicing <br />Vitae
@@ -185,8 +188,41 @@
       </section>
     </main>
     <!-- footer start  -->
-    <footer>
-      
+    <footer class="footer-container">
+      <div class="footer-all-colum">
+        <div class="colum">
+          <img src="./logo/logo.png" alt="">
+          <p class="colum-1-text">Lorem ipsum dolor sit amet, <br>  consectetur adipisicing  ad <br> magnam, deserunt .</p>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+        <div class="colum">
+          <h4 class="colum-title">Useful Links</h4>
+          <li>About Us</li>
+          <li>Contact</li>
+          <li>News</li>
+          <li>Legal Notice</li>
+        </div>
+        <div class="colum">
+          <h4 class="colum-title">Supports</h4>
+          <li>Help Center</li>
+          <li>Contact Us</li>
+          <li>FAQ</li>
+          <li>Parent Community</li>
+        </div>
+        <div class="colum">
+          <h4 class="colum-title">Contact Information</h4>
+          <li>Feel Free To Contact & Reach Us!!</li>
+          <li>3557 Drive</li>
+          <li>+018864820</li>
+          <li>info@domain.com</li>
+        </div>
+      </div>
+      <hr>
+      <span class="copy-right">&copy;2024-Digital-Agency-build</span>
     </footer>
   </body>
+  <script src="https://kit.fontawesome.com/70a4920640.js" crossorigin="anonymous"></script>
 </html>
